samples/_failures_safe/1761072805_4ea1c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc2d7038.c: In function ‘main’:
./samples/SAFE/__tmp_fc2d7038.c:163:9: error: expected expression at end of input
  163 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_fc2d7038.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc2d7038.c:163:9: error: expected declaration or statement at end of input
